# crazyflie-firmware

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  stm32f4-bastard.cmake  stm32f4-clang.cmake  stm32f4-clang_plus_gcc.cmake  stm32f4-gcc.cmake  stm32f4.cmake
projects/: CMakeLists.txt
projects/appchannel/: README.md
projects/appchannel/src/: main.cpp
projects/appchannel/tools/: appchannel.py
projects/cdr/: CMakeLists.txt  README.md
projects/cdr/src/: main.cpp
projects/rr/: CMakeLists.txt  README.md
projects/rr/include/: battery.hpp  communication.hpp
projects/rr/src/: battery.cpp  communication.cpp  main.cpp  porting.cpp
projects/rr/tools/: appchannel.py  land_all.py  take_off.py
projects/sandbox/: CMakeLists.txt  README.md
projects/sandbox/src/: main.cpp
projects/sgba/: CMakeLists.txt  median_filter.h  state_machine.c
projects/sgba/include/: StateMachine.hpp  compat.h  porting.h  porting.hpp  types.h
projects/sgba/include/exploration/: SGBA.hpp  StateMachine.hpp  WallFollowing.hpp  WallFollowingWithAvoid.hpp  median_filter.hpp  types.hpp  wallfollowing.hpp
projects/sgba/src/: StateMachine.cpp  main.cpp  porting.cpp  state_machine.c
projects/sgba/src/exploration/: SGBA.cpp  StateMachine.cpp  WallFollowing.cpp  WallFollowingWithAvoid.cpp  math_supp.hpp  median_filter.cpp  wallfollowing.cpp
projects/sgba/tools/: RSSI_beacon.py  land_all.py  take_off.py
projects/time/src/: main.cpp
src/: main.c  main.cpp  state_machine.c
